detail page update

--- a/app/assets/style/layout/_header.scss
+++ b/app/assets/style/layout/_header.scss
@@ -27,7 +27,7 @@
         color: $secondary-dark;
         position: relative;
     }
-    .ticket-count {
+    .cart-count {
         position: absolute;
         width: 22px;
         height: 18px;
