--- a/app/assets/style/pages/_detail.scss
+++ b/app/assets/style/pages/_detail.scss
@@ -1,6 +1,136 @@
 .ticket {
+    h3 {
+        font-size: $h5-font-size;
+    }
+    &-content {
+        position: relative;
+
+        .display-date {
+            font-size: $h5-font-size;
+            color: $white;
+            position: absolute;
+            top: 53px;
+            right: 45px;
+            @include mobile {
+                display: none;
+            }
+        }
+    }
     &-img {
         width: 100%;
+        height: 256px;
         object-fit: cover;
     }
+
+    &-title {
+        @include mobile {
+            display: flex;
+            justify-content: space-between;
+        }
+        img {
+            width: 20px;
+            height: 20px;
+        }
+    }
+    &-date {
+        display: none;
+        @include mobile {
+            display: inline-block;
+        }
+    }
+    &-number {
+        width: 100%;
+        height: 256px;
+        display: flex;
+        margin-bottom: $spacer * 2.625;
+        @include mobile {
+            height: auto;
+            flex-direction: column;
+            margin-bottom: $spacer * 2.5;
+        }
+    }
+    &-count {
+        width: 50%;
+        padding-top: $spacer * 5.5;
+        border-right: 1px solid $secondary;
+        @include mobile {
+            width: 100%;
+            padding-top: $spacer * 2.5;
+            border: 0;
+        }
+    }
+    &-price {
+        width: 50%;
+        padding-top: $spacer * 5.5;
+        @include mobile {
+            width: 100%;
+            padding-top: $spacer * 2.5;
+        }
+    }
+    .count-display {
+        font-size: $h1-font-size;
+    }
+    &-class {
+        li {
+            width: 65px;
+            padding-bottom: 3px;
+            border-bottom: 1px solid $white;
+            &:nth-child(2) {
+                border-bottom: 1px solid $accent;
+            }
+        }
+    }
+    &-btn {
+        button {
+            width: 47%;
+        }
+    }
+}
+
+.event {
+    &-info {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    &-img-lg {
+        width: 100%;
+        height: 400px;
+        overflow: hidden;
+        @include mobile {
+            order: 2;          
+        }
+        img {
+            width: 100%;
+            height: inherit;
+            object-fit: cover;
+        }
+    }
+    &-img {
+        width: 31.5%;
+        height: 560px;
+        @include mobile {
+            width: 100%;
+            order: 3;
+        }
+        img {
+            width: 100%;
+            height: inherit;
+            object-fit: cover;
+        }
+    }
+    &-txt {
+        width: 65.77%;
+        @include mobile {
+            width: 100%;
+            order: 1;
+        }
+        h3 {
+            font-size: $h5-font-size;
+        }
+        .p-indent {
+            text-indent: 2rem;
+        }
+    }
+
 }
