--- a/app/layout-content.ejs
+++ b/app/layout-content.ejs
@@ -20,11 +20,15 @@
             <li class="ms-8"><a href="#" title="Sign in">Sign in</a></li>
             <li class="ms-8"><a href="#" title="Sign up">Sign up</a></li>
             <li class="ms-8">
-              <a href="#" title="ticket sum up">
+              <button type="button" class="cart-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                <span class="material-icons">confirmation_number</span>
+                <span class="cart-count">3</span>
+              </button>
+              <!-- <a href="#" title="ticket sum up" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                 <span class="material-icons">confirmation_number
                   <span class="cart-count">3</span>
                 </span>
-              </a>
+              </a> -->
             </li>
           </ul>
       </div>
