--- a/app/assets/style/helpers/_components.scss
+++ b/app/assets/style/helpers/_components.scss
@@ -2,3 +2,21 @@
     padding-top: $spacer * 0.625;
     padding-bottom: $spacer * 0.625;
 }
+
+.card-in-modal {
+    margin-bottom: $spacer * 0.75;
+    padding-top: $spacer * 1.75;
+    padding-bottom: $spacer * 1.5;
+    padding-left: $spacer *2;
+    padding-right: $spacer *2;
+    @include mobile {
+        margin-bottom: $spacer * 0.5;
+        padding-top: $spacer * 2.25;
+        padding-bottom: $spacer;
+        padding-left: $spacer;
+        padding-right: $spacer;        
+    }
+    .card-body {
+        padding-right: 0;
+    }
+}
