--- a/app/assets/style/helpers/_components.scss
+++ b/app/assets/style/helpers/_components.scss
@@ -1,8 +1,28 @@
+// btn
 .btn {
     padding-top: $spacer * 0.625;
     padding-bottom: $spacer * 0.625;
 }
 
+.btn-checkout {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: $spacer * 2.5;
+    .btn-pre {
+        width: 14.5%;
+        @include mobile {
+            width: 47.8%;
+        }
+    }
+    .btn-next {
+        width: 31.5%;
+        @include mobile {
+            width: 47.8%;
+        }
+    }
+}
+
+// card
 .card-in-modal {
     margin-bottom: $spacer * 0.75;
     padding-top: $spacer * 1.75;
@@ -18,5 +38,54 @@
     }
     .card-body {
         padding-right: 0;
+    }
+}
+
+// timeline
+.timeline {
+	position: relative;
+    margin: 20px 0;
+    &::after {
+        content: "";
+        position: absolute;
+        left: 0;    
+        right: 0;
+        top: 0;
+        height: 2px; 
+        background-color: $accent;
+    }
+    &-pointer {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        &::before {
+            content: "";
+            position: absolute;
+            left: 50%;
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            transform: translate(-50%,-25%);
+            border: 1px solid $accent;
+            background-color: $white;
+            z-index: 10;
+        }
+    }
+    &-active::before {
+        background-color: $accent;
+    }
+    @include mobile {
+        font-size: $font-size-base * .875;
+    }
+}
+
+// form
+.form-order {
+    input {
+        width: 100%;
+        padding: $spacer *.5 0  $spacer *.5 $spacer *.75 ;
+        border-color: $gray-400;
+        border-style: solid;
+        border-radius: 0.25rem;
     }
 }
