--- a/app/assets/style/components/_nav-main.scss
+++ b/app/assets/style/components/_nav-main.scss
@@ -11,7 +11,7 @@
         width: 65px;
         margin-right: $spacer * 1.125;
         .nav-main-link {
-            width: 100%; //hover寬度沒有變化
+            width: 100%; 
             padding: 3px 0;
             border-bottom: 1px solid $white;
             &:hover {
