--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -7,13 +7,19 @@
 @import "./helpers/mixin";
 @import "./helpers/base";
 @import "./helpers/grid";
-@import "./helpers/components";
 @import "./helpers/util";
+
+// components
+@import "./components/btn";
+@import "./components/card";
+@import "./components/form";
+@import "./components/nav-main";
+@import "./components/swiper";
+@import "./components/timeline";
+
 
 // layout
 @import "./layout/header";
-@import "./layout/nav-main";
-@import "./layout/swiper";
 @import "./layout/footer";
 
 // pages
