--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -13,6 +13,7 @@
 @import "./components/btn";
 @import "./components/card";
 @import "./components/form";
+@import "./components/modal";
 @import "./components/nav-main";
 @import "./components/swiper";
 @import "./components/timeline";
