--- a/app/assets/style/components/_card.scss
+++ b/app/assets/style/components/_card.scss
@@ -4,21 +4,53 @@
         font-size: $h5-font-size;   
     }
 } 
-// card-modal
-.card-in-modal {
+// card-in-modal
+.modal-body .card {
+    position: relative;
+    max-width: 476px;
+    height: 172px;
     margin-bottom: $spacer * 0.75;
     padding-top: $spacer * 1.75;
     padding-bottom: $spacer * 1.5;
     padding-left: $spacer *2;
     padding-right: $spacer *2;
     @include mobile {
+        height: auto;
         margin-bottom: $spacer * 0.5;
         padding-top: $spacer * 2.25;
         padding-bottom: $spacer;
         padding-left: $spacer;
-        padding-right: $spacer;        
+        padding-right: $spacer;
+    } 
+    &-close {
+        position: absolute;
+        top: 4px;
+        left: 4px;
     }
-    .card-body {
+    &-img {
+        width: 100%;
+        height: 120px;
+        object-fit: cover;
+        border-radius: 0;
+    }
+    &-body {
         padding-right: 0;
+    } 
+    &-body-end {
+        justify-content: space-between;
+        align-items: center;
+        @include mobile {
+            flex-direction: column-reverse;
+            justify-content: center;
+            width: 8.5%;
+        }
     }
+    &-body p {
+        font-size: $font-size-base;
+        &:nth-of-type(2) {
+            margin-bottom: $spacer * .875;
+        }
+    }
+
 }
+
