--- a/app/assets/style/components/_nav-main.scss
+++ b/app/assets/style/components/_nav-main.scss
@@ -1,7 +1,7 @@
 .nav-main {
     max-width: 748px;
     padding: $spacer * 0.875 0;
-    @include mobile { // pad會掉下來
+    @include pad { // pad會掉下來
         width: 100%;
         flex-wrap: nowrap;
         overflow-x: auto;
